--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Appointment</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- font awesom cdnlink -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
+   <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
+    <!----------------------------Navbar------------------------------------->
     <nav id="navbar" >
         <div id="logo">
                  <img src="doctor_logo.jpeg" alt="">
@@ -18,6 +24,40 @@
                 <li><a href="">Contact US</a></li>
         </ul>
     </nav>
+    <!-- -----------------------------------Navbar end------------------------------------------------- -->
+
+    <!-- --------------------------------Main Section ------------------------------------------------- -->
+
+    <div id="home">
+
+
+        <div class="first">   <!---------------first div------------>
+        <h1 class=" animate___animated
+                    animate_flip
+                    animate_infinite">
+           Quality Doctors For Your Best Care</h1>
+
+
+        <div class="underline"></div>
+        
+        <br><br>
+        <p>Lndis aspernatur architecto. Obcaecati, quod! Maiores sapiente explicabo, eius fugit provident vitae amet asperiores rerum tenetur corporis excepturi aliquid accusamus necess anditiis. Voluptatum?
+        Temporibus quia nisi, quod in sunt consectetur, unde culpa, optio facere dolor volupta</p> <br> 
+
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus necessitatibus nesciunt beatae perspiciatis totam impedit esse. Nesciunt doloremque nostrum tenetur mais ut id ratione? Velit qui ut dolorem. In, eius!</p>
+
+        <br>
+        <button class="btn">Appointment</button></div> <!-------- end--------->
+
+
+        <div class="second">
+        </div>   <!--- second  div-->
+        
+    </div>
+
+
+    <script src="script.js"></script>
 
 </body>
 </html>
