--- a/index.html
+++ b/index.html
@@ -75,19 +75,26 @@
      </div>
 
 <!-- swipper body  starts from here-->
-<!-- page2 -->
- <div id="page2">
+ <!---------------------------------------- page2 -------------------------------------------------------->
+ <div id="hii">
+  <!-- <div class="h1"><h2>About Us</h2></div> -->
+  <!-- <div class="about_u"></div> -->
+  <div data-aos="zoom-out class="img>
+    <h1>About Us</h1>
+    <div class="about_u"></div>
+    <br><br>
+    <h1> Best Medical Care For Yourself And Your Family</h1></div>
+   <div class="page2">
   
-  <div class="img"> <h1>Best Medical Care For Yourself And Your Family</h1></div>
-    <h1>About US</h1>
-    <div class="inner" >  
-          <div class="inner1"  data-aos="fade-right"> <p>hello</p> </div>
-          <div class="inner2"  data-aos="zoom-in" >   <p>hello</p> </div>
-          <div class="inner3"  data-aos="fade-right"> <p>hello</p> </div>
-          <div class="inner4"  data-aos="fade-left">  <p>hello</p> </div>
+        <div class="img"> </div>
+
+        <div class="inner">  
+          <div class="inner1"  data-aos="fade-right"><span class="image" > <img src="specialist 1.webp" alt="specialist 1"></span> </div>
+          <div class="inner2"  data-aos="zoom-in" > <span class="image" > <img src="specialist2.webp" alt="specialist2">  </span></div>
+          <div class="inner3"  data-aos="fade-right"><span class="image" > <img src="specialist 1.webp" alt="specialist"></span> </div>
     </div>
  </div>
-
+</div>
 
 <!------ page2 end---------->
 
@@ -100,14 +107,14 @@
 <div class="four"> 
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div hello class="swiper-slide"><img src="cardiologist_image.jpg" alt=""> <span class="spann"> Cardiologist</span>  </div>
-          <div class="swiper-slide"><img src="dentist_image.avif" alt=""><span class="spann"></span> Dentist </span> </div>
-          <div class="swiper-slide"><img src="dermatologist_image.avif" alt=""> <span class="spann">Dermmatologist </span> </div>         
-          <div class="swiper-slide"><img src="orthopedic_image.avif" alt=""> <span class="spann"> Orthopedic </span> </div>           
-          <div class="swiper-slide"><img src="pediatrician_image.avif" alt=""> <span class="spann"> Pediatrician </span> </div>            
-          <div class="swiper-slide"><img src="psychologist_image.jpg" alt="" ><span class="spann">  Psychologist </span> </div>            
-          <div class="swiper-slide"><img src="surgery_anaesthesia_image.webp" alt=""> <span class="spann"> Surgen </span> </div>            
-          <div class="swiper-slide"><img src="examining-patient.avif" alt=""> <span class="spann"> Cheack up </span>  </div>
+          <div hello class="swiper-slide"><img src="cardiologist_image.jpg" alt=""> <span class="spann"><h3> Cardiologist<h3></span>  </div>
+          <div class="swiper-slide"><img src="dentist_image.avif" alt=""><span class="spann"><span><h3> Dentist</h3> </span> </div>
+          <div class="swiper-slide"><img src="dermatologist_image.avif" alt=""> <span class="spann"><h3> Dermatologist </h3> </span> </div>         
+          <div class="swiper-slide"><img src="orthopedic_image.avif" alt=""> <span class="spann"> <h3> Orthopedic </h3> </span> </div>           
+          <div class="swiper-slide"><img src="pediatrician_image.avif" alt=""> <span class="spann"> <h3> Pediatrician </h3> </span> </div>            
+          <div class="swiper-slide"><img src="psychologist_image.jpg" alt="" ><span class="spann">  <h3> Psychologist </h3> </span> </div>            
+          <div class="swiper-slide"><img src="surgery_anaesthesia_image.webp" alt=""> <span class="spann"> <h3> Surgen </h3> </span> </div>            
+          <div class="swiper-slide"><img src="examining-patient.avif" alt=""> <span class="spann"> <h3> Check up </h3> </span>  </div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
